--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "plugins": [
     ["prismjs", {
-      "languages": ["php"],
+      "languages": ["php", "java"],
       "plugins": ["line-numbers"],
       "theme": "tomorrow",
       "css": true
