--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "node_modules/.bin/webpack --mode=production",
-    "watch": "node_modules/.bin/webpack --mode=development --watch=true"
+    "build": "webpack --mode=production",
+    "watch": "webpack --mode=development --watch=true"
   },
   "dependencies": {
     "chart.js": "^2.9.2",
@@ -18,8 +18,8 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
-    "node-sass": "^4.13.0",
     "prismjs": "^1.17.1",
+    "sass": "^1.59.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
