--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "description": "",
   "scripts": {
     "build": "webpack --mode=production",
-    "watch": "webpack --mode=development --watch=true"
+    "watch": "webpack --mode=development --watch"
   },
   "dependencies": {
-    "chart.js": "^2.9.2",
+    "chart.js": "^4.2.1",
     "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-prismjs": "^1.1.1",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-prismjs": "^2.1.0",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
+    "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "prismjs": "^1.17.1",
     "sass": "^1.59.3",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.76.2",
+    "webpack-cli": "^5.0.1"
   }
 }
